--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <h1>Noah Hugeth</h1>
     <script>
-        document.write("<h2>Działa</h2>")
+        document.write("<h2>Działa</h2>");
     </script>
 </body>
 </html>
